--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game">
+  <div id="usernameForm">
+    <input type="text" id="usernameInput" placeholder="Enter your username">
+    <button id="submitUsername">Submit</button>
+  </div>
+
+  <div id="game" style="display: none;">
     <div id="question"></div>
     <input type="text" id="answerInput" placeholder="Type your answer">
     <button id="submitAnswer">Submit</button>
     <div id="scoreboard"></div>
   </div>
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="client.js"></script>
 </body>
