--- a/public/index.html
+++ b/public/index.html
@@ -27,16 +27,7 @@
     </div>
 
     <div class="input_container">
-      <div id="usernameForm">
-        <form id="username_form">
-          <input
-            type="text"
-            id="usernameInput"
-            placeholder="이름을입력하세요"
-          />
-          <button id="submitUsername">Submit</button>
-        </form>
-      </div>
+      <a href="/auth/login"><button id="login_button">login</button></a>
 
       <div id="game" style="display: none">
         <form id="game_form">
