--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,15 @@
       </div>
     </div>
 
-    <div class="input_container">
-      <a href="/auth/login"><button id="login_button">login</button></a>
+    <a href="/auth/login"><button id="login_button">login</button></a>
 
+    <div class="input_container">
       <div id="game" style="display: none">
         <form id="game_form">
           <input type="text" id="answerInput" placeholder="정답을 입력하세요" />
           <button id="submitAnswer">Submit</button>
         </form>
+        <a href="/avata"><button id="avata_button">아바타</button></a>
       </div>
     </div>
 
