--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,16 @@
     </div>
 
     <div class="main_container">
+      <div class="avatar_container">
+        <img src="img/skin00.png" alt="skin" class="avata_skin" />
+        <img src="img/hair00.png" alt="hair" class="avata_hair" />
+        <img src="img/clothing00.png" alt="clothing" class="avata_clothing" />
+        <img
+          src="img/accessories00.png"
+          alt="accessories"
+          class="avata_accessories"
+        />
+      </div>
       <div class="score_container">
         <div id="scoreboard"></div>
       </div>
